# mirror-ai-reviewer

./: .cursorrules  .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  dev.py  docker-compose.yml  langgraph.json  main.py  pyproject.toml  railway.toml  test_inference_pipeline.py  test_results.json  trivy.yaml
.github/workflows/: backend.yml  bump-version.yml  deploy.yml  frontend.yml  main.yml  security.yml
alembic/: env.py
alembic/versions/: 14c9a3334e1d_workflow_persistence_changes.py  1e1b703e2340_create_user_model.py  79eb938381a8_switches_to_explicitely_listing_tools.py  8c26fdd2eb3a_add_feedback_table.py  98b0e22e71a6_run_status.py  aa82a3711f86_drop_unused_models.py  c6b3cc257d3c_add_user_connections.py  e02d6d007602_add_pgvector_extension.py  e8cd4f1f7766_initial_migration_create_agents_.py
api/: auth.py  dependencies.py  main.py  types.py  upload.py
api/routers/: analysis.py  evaluation.py  feedback.py  files.py  health.py  workflows.py
api/services/: __init__.py  chunk_reevaluation.py  workflow_runner.py
cli/: process_document.py
docs/: index.md
frontend/: .dockerignore  .env.template  Dockerfile  auth.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  railway.toml
frontend/app/: layout.tsx  page.tsx
frontend/components/: ai-generated-label.tsx  application-shell.tsx  claim-feedback.tsx  labeled-value.tsx  markdown-with-highlights.tsx  markdown.tsx  providers.tsx  version-badge.tsx  workflow-runs-list.tsx
frontend/lib/: analysis-service.ts  api.ts  badge-styles.ts  claim-classification.ts  constants.ts  file-download.ts  reference-scoring.ts  severity.ts  utils.ts
frontend/types/: docling.ts
k8s/: README.md  api.yaml  configmap.yaml  database.yaml  frontend.yaml  network-policy.yaml
lib/: config.py  database_utils.py  run_utils.py
lib/agents/: addendum_generator.py  addendum_report_generator.py  citation_detector.py  citation_suggester.py  claim_categorizer.py  claim_common_knowledge_checker.py  claim_detector.py  claim_extractor.py  claim_needs_substantiation_checker.py  claim_substantiator.py  claim_verifier.py  document_chunker.py  document_chunker_nltk.py  document_summarizer.py  evidence_weighter.py  formatting_utils.py  inference_evaluation_script.py  inference_validator.py  literature_review.py  live_literature_review.py  markdown_cleaner.py  models.py  (+9 more)
streamlit/: main.py
tests/: conftest.py
(+457 files in other folders)
