[project]
name = "rand-ai-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "langfuse>=3.3.4",
    "streamlit>=1.49.1",
]
