[project]
name = "rand-ai-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "ddgs>=9.6.0",
    "langchain-openai>=0.3.32",
    "langchain-experimental>=0.3.5rc1",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.2.45",
    "langfuse>=3.3.4",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "sqlmodel>=0.0.24",
    "markitdown[all]>=0.1.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "fastapi[standard]>=0.116.1",
    "deepdiff[optimize]>=8.6.1",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.0",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary,pool]>=3.2.10",
    "alembic-postgresql-enum>=1.8.0",
]
