[project]
name = "ai-reviewer"
version = "0.1.0"
description = "AI-powered peer-review document analysis"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "langchain>=1.0.0",
    "langchain-community>=1.0.0",
    "ddgs>=9.6.0",
    "langchain-openai>=1.0.0",
    "langchain-experimental>=0.3.5rc1",
    "langchain-google-genai>=2.1.10",
    "langchain-postgres>=0.0.12",
    "langgraph>=1.0.0",
    "langfuse>=3.3.4",
    "pgvector>=0.2.5,<0.4",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "sqlmodel>=0.0.24",
    "markitdown[all]>=0.1.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-json-report>=1.5.0",
    "fastapi[standard]>=0.116.1",
    "deepdiff[optimize]>=8.6.1",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.0",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary,pool]>=3.2.10",
    "alembic-postgresql-enum>=1.8.0",
    "pytest-repeat>=0.9.4",
    "xxhash>=3.5.0",
]

[tool.pytest.ini_options]
addopts = [
    "--json-report",
    "--json-report-file=test_results.json",
    "--json-report-indent=2",
    "-v",
    "-n",
    "10"
]
